<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:text="@string/b"/>
    <TextView
        android:id="@+id/v"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/b"
        android:textColor="#FFFF00"
        android:layout_marginEnd="10dp"
        android:text="@string/v"/>
    <TextView
        android:id="@+id/app"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/v"
        android:textColor="@color/black"
        android:text="@string/a"/>
</RelativeLayout>