<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/username"
        android:textColor="#a5d4e2"
        android:textSize="25sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_label"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="4dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_input"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/password"
        android:textColor="#a5d4e2"
        android:textSize="25sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textSize="18sp" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/register_button"
        android:text="@string/login"
        android:textSize="18sp" />


</RelativeLayout>